[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/units/unit.gd" type="Script" id=1]
[ext_resource path="res://scenes/common/z_index.gd" type="Script" id=2]
[ext_resource path="res://scenes/common/health.gd" type="Script" id=3]
[ext_resource path="res://assets/gladiator_mini_mini.png" type="Texture" id=4]
[ext_resource path="res://assets/shadow.png" type="Texture" id=5]
[ext_resource path="res://scenes/units/unit_state_machine.gd" type="Script" id=6]
[ext_resource path="res://scenes/units/states/on_ground/idle.gd" type="Script" id=7]
[ext_resource path="res://scenes/units/states/on_ground/move.gd" type="Script" id=8]
[ext_resource path="res://scenes/units/states/in_air/jump.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=9]

custom_solver_bias = 0.0
radius = 9.1684
height = 37.6371

[sub_resource type="Animation" id=2]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Container/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 72, 0, 72, 72 ), Rect2( 0, 0, 72, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Container/Chest:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Container/Helm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.505134, 0.234466 ), Vector2( 0.678889, 0.303557 ), Vector2( 0.505134, 0.234466 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Container/Legs:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 504, 0, 72, 72 ), Rect2( 360, 0, 72, 72 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Container/Body:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 216, 0, 72, 72 ), Rect2( 0, 0, 72, 72 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.505134, 0.234466 ), Vector2( 0.531227, 0.313 ), Vector2( 0.505134, 0.234466 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Container/Body:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 144, 0, 72, 72 ), Rect2( 216, 0, 72, 72 ), Rect2( 0, 0, 72, 72 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Container/Legs:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.16, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 432, 0, 72, 72 ), Rect2( 504, 0, 72, 72 ), Rect2( 360, 0, 72, 72 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Container/Helm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/Container/Chest:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "Bottom_Left"
length = 0.1
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Container/Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=6]

resource_name = "Bottom_Right"
length = 0.1
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Container/Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=7]

resource_name = "Top_Left"
length = 0.1
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Container/Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=8]

length = 0.1
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Container/Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[node name="Unit" type="KinematicBody2D" groups=[
"Units",
"Hitable",
]]

position = Vector2( 0.418694, -0.523365 )
z_index = 1
input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index", "collision" ]
unit_name = "generic_unit"
weapon_path = "swing_weapon/shortsword/Shortword.tscn"
use_hands = false
reach = 30.001

[node name="Z_Index" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="Health" type="Node" parent="." index="1"]

script = ExtResource( 3 )
health = 1
maxHealth = 1
minHealth = 0

[node name="Collision" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 1.86922, 6.14645 )
scale = Vector2( 1.42755, 1.06179 )
z_index = 4096
shape = SubResource( 9 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Pivot" type="Position2D" parent="." index="3"]

_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="U_Hand_Pivot" type="Position2D" parent="Pivot" index="0"]

position = Vector2( -12, 12 )
z_index = 5
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="U_Hand" type="Sprite" parent="Pivot/U_Hand_Pivot" index="0"]

position = Vector2( 2.34761, 5.18926 )
z_index = 1
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 321, 39, 6, 6 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[node name="L_Hand_Pivot" type="Position2D" parent="Pivot" index="1"]

position = Vector2( 11.5954, 17.9151 )
z_index = -1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="L_Hand" type="Sprite" parent="Pivot/L_Hand_Pivot" index="0"]

texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 321, 39, 6, 6 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[node name="WeaponPivot" type="Position2D" parent="Pivot" index="2"]

position = Vector2( 0, 16 )
z_index = 3
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Container" type="Position2D" parent="Pivot" index="3"]

z_index = 1
_sections_unfolded = [ "Offset", "Z Index" ]

[node name="Legs" type="Sprite" parent="Pivot/Container" index="0"]

z_index = 4
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 360, 0, 72, 72 )
_sections_unfolded = [ "Region", "Z Index" ]

[node name="Helm" type="Sprite" parent="Pivot/Container" index="1"]

visible = false
z_index = 3
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 72, 72, 72 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Chest" type="Sprite" parent="Pivot/Container" index="2"]

visible = false
z_index = 3
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 72, 72, 72, 72 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Body" type="Sprite" parent="Pivot/Container" index="3"]

position = Vector2( -4.47035e-007, 0 )
z_index = 2
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 72, 72 )
region_filter_clip = true
_sections_unfolded = [ "Offset", "Region", "Transform", "Z Index" ]

[node name="Shadow" type="Sprite" parent="." index="4"]

modulate = Color( 1, 1, 1, 0.475137 )
position = Vector2( -1.26088, 32.34 )
rotation = 0.00174533
scale = Vector2( 0.505134, 0.234466 )
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( -1.39726, 1.21561 )
region_rect = Rect2( 0, 0, 72, 72 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/move = SubResource( 4 )
blend_times = [  ]

[node name="SpritePlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Bottom_Left = SubResource( 5 )
anims/Bottom_Right = SubResource( 6 )
anims/Top_Left = SubResource( 7 )
anims/Top_Right = SubResource( 8 )
blend_times = [  ]

[node name="StateMachine" type="Node" parent="." index="7"]

script = ExtResource( 6 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]

script = ExtResource( 7 )

[node name="Move" type="Node" parent="StateMachine" index="1"]

script = ExtResource( 8 )
MAX_WALK_SPEED = 200.0
MAX_SPRINT_SPEED = 400.0

[node name="Jump" type="Node" parent="StateMachine" index="2"]

editor/display_folded = true
script = ExtResource( 9 )
MAX_JUMP_DISTANCE = 192

[node name="Tween" type="Tween" parent="StateMachine/Jump" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0


